set(NAME order_latency_measurement)
project(${NAME})
add_compile_definitions(CCAPI_ENABLE_SERVICE_EXECUTION_MANAGEMENT)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_GATEIO)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_KUCOIN)
add_compile_definitions(CCAPI_ENABLE_SERVICE_MARKET_DATA)
add_executable(${NAME} main.cpp)
add_dependencies(${NAME} boost rapidjson)
